<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="create">创建</string>
    <string name="modify">修改</string>
    <string name="create_joint">创建协同</string>
    <string name="recycle_bin">回收站</string>
    <string name="commit">提交</string>
    <string name="me_issued">我下发</string>
    <string name="me_cooperate">我协同</string>
    <string name="joint_title">协同标题</string>
    <string name="joint_title_hint">请输入协同标题</string>
    <string name="joint_content">协同内容</string>
    <string name="joint_content_hint">请输入协同内容</string>
    <string name="joint_person">协同人员</string>
    <string name="joint_person_hint">选择协同人员</string>
    <string name="joint_state">协同状态</string>
    <string name="unfinished">未完成</string>
    <string name="input_review_content">输入审核内容</string>
    <string name="send">发送</string>
    <string name="reply">回复</string>
</resources>